[~]delete and correction bash

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
 
             <div class="mb-3">
                 <label for="ref_genome" class="form-label">Select the genome file (e.g., .mmi):</label>
-                <input type="file" class="form-control" name="ref_genome" accept=".mmi" required>
+                <input type="text" class="form-control" name="ref_genome" placeholder=".mmi" required>
             </div>
             <div class="mb-3">
                 <label for="qs_scores" class="form-label">Enter Q-scores separated by spaces:</label>
