[~]delete and correction bash

--- a/templates/vcf_creator.html
+++ b/templates/vcf_creator.html
@@ -17,7 +17,7 @@
         <form id="configForm">
             <div class="mb-3">
                 <label for="ref_genome" class="form-label">Select the genome file (e.g., .mmi):</label>
-                <input type="file" class="form-control" name="ref_genome" accept=".mmi" required>
+                <input type="text" class="form-control" name="ref_genome" accept=".mmi" required>
             </div>
             <div class="mb-3">
                 <label for="bam_file" class="form-label">Select the BAM file:</label>
