--- a/templates/history-basecalling.html
+++ b/templates/history-basecalling.html
@@ -16,7 +16,19 @@
 </head>
 <body>
     <div class="container">
-        <h1>Configuration History</h1>
+        <div class="container">
+            <div class="d-flex justify-content-between align-items-center">
+                <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="/">Home</a></li>
+                        <li class="breadcrumb-item active"><a href="/basecalling">Basecalling + demultiplexing</a></li>
+                        <li class="breadcrumb-item active" aria-current="page"><a href="/history-basecalling">Historique</a></li>
+                    </ol>
+                  </nav>
+                <h1 class="mb-4 flex-grow-1 text-center">Configuration History</h1>
+            </div>
+        </div>
+
         <table class="table table-striped">
             <thead>
                 <tr>
