--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,19 @@
 
 <body>
     <div class="container">
-        <h1 class="mb-4">Basecalling + demultiplexing</h1>
+        <div class="container">
+            <div class="d-flex justify-content-between align-items-center">
+                <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="/">Home</a></li>
+                        <li class="breadcrumb-item active"><a href="/basecalling">Basecalling + demultiplexing</a></li>
+                        <li class="breadcrumb-item active" aria-current="page"><a href="/history-basecalling">Historique</a></li>
+                    </ol>
+                  </nav>
+                <h1 class="mb-4 flex-grow-1 text-center">Basecalling + demultiplexing</h1>
+            </div>
+        </div>
+        
         <form method="POST" enctype="multipart/form-data" id="configForm">
             <div class="mb-3">
                 <label for="base_output_dir" class="form-label">Set the base output directory:</label>
