--- a/templates/vcf_creator.html
+++ b/templates/vcf_creator.html
@@ -9,11 +9,31 @@
     <link href="https://cdn.jsdelivr.net/npm/prismjs/themes/prism-okaidia.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/prismjs/prism.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs/components/prism-bash.min.js"></script>
+    <style>
+        body {
+            padding-top: 20px;
+        }
+        .container {
+            max-width: 90%;
+        }
+    </style>
 </head>
 
 <body>
     <div class="container">
-        <h1>VCF Creator Configuration</h1>
+        <div class="container">
+            <div class="d-flex justify-content-between align-items-center">
+                <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="/">Home</a></li>
+                        <li class="breadcrumb-item active"><a href="/vcf_creator">VCF Creator Configuration</a></li>
+                        <li class="breadcrumb-item active" aria-current="page"><a href="/history-vcf">Historique</a></li>
+                    </ol>
+                  </nav>
+                <h1 class="mb-4 flex-grow-1 text-center">VCF Creator Configuration</h1>
+            </div>
+        </div>
+
         <form id="configForm">
             <div class="mb-3">
                 <label for="ref_genome" class="form-label">Select the genome file (e.g., .mmi):</label>
