--- a/templates/bam_merger.html
+++ b/templates/bam_merger.html
@@ -9,10 +9,13 @@
     <link href="https://cdn.jsdelivr.net/npm/prismjs/themes/prism-okaidia.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/prismjs/prism.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs/components/prism-bash.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.0/socket.io.js"></script>
+
     <style>
         body {
             padding-top: 20px;
         }
+
         .container {
             max-width: 90%;
         }
@@ -23,13 +26,15 @@
     <div class="container">
         <div class="container">
             <div class="d-flex justify-content-between align-items-center">
-                <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
+                <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);"
+                    aria-label="breadcrumb">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="/">Home</a></li>
                         <li class="breadcrumb-item active"><a href="/bam_merger">BAM Merger Configuration</a></li>
-                        <li class="breadcrumb-item active" aria-current="page"><a href="/history-merge">Historique</a></li>
+                        <li class="breadcrumb-item active" aria-current="page"><a href="/history-merge">Historique</a>
+                        </li>
                     </ol>
-                  </nav>
+                </nav>
                 <h1 class="mb-4 flex-grow-1 text-center">Basecalling + demultiplexing</h1>
             </div>
         </div>
@@ -51,6 +56,8 @@
         <!-- Zone de code pour afficher le script Bash -->
         <pre><code class="language-bash" id="scriptArea"></code></pre>
         <button onclick="copyToClipboard()">Copier</button>
+        <button onclick="downloadScript()" class="btn btn-primary mb-3">Download Script</button>
+        <button id="runScriptButton" class="btn btn-primary">Start Script</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -127,6 +134,65 @@
                 })
                 .catch(error => console.error('Error:', error));
         }
+    </script>
+    <script>
+        function downloadScript() {
+            window.location.href = '/download_bam_script';
+        }
+    </script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            var socket = io.connect('http://localhost:5000/test');
+            console.log('Socket.IO status:', typeof io);
+
+            var runButton = document.getElementById('runScriptButton');
+            if (runButton) {
+                runButton.addEventListener('click', function () {
+                    socket.emit('start_script');
+                    console.log('Script start requested.');  // Ajoutez ceci pour débugger
+                });
+            } else {
+                console.error('Run script button not found!');  // Ajoutez ceci pour débugger
+            }
+
+            socket.on('script_output', function (data) {
+                if (data.type === 'stderr') {
+                    console.error(data.message);
+                } else {
+                    console.log(data.message);
+                }
+            });
+
+            socket.on('script_error', function (data) {
+                console.error('Script error:', data.status);  // Affichez le statut de l'erreur
+            });
+        });
+
+    </script>
+    <script>
+        function downloadScript() {
+            var downloadButton = document.getElementById('start-script');
+            fetch('/download_bam_script')
+                .then(response => {
+                    if (response.ok) {
+                        downloadButton.disabled = false;  // Réactiver le bouton après le téléchargement
+                        return response.blob();
+                    }
+                    throw new Error('Network response was not ok.');
+                })
+                .then(blob => {
+                    var url = window.URL.createObjectURL(blob);
+                    var a = document.createElement('a');
+                    a.style.display = 'none';
+                    a.href = url;
+                    a.download = 'bam_merge_script.sh';
+                    document.body.appendChild(a);
+                    a.click();
+                    window.URL.revokeObjectURL(url);
+                })
+                .catch(error => console.error('Download failed:', error));
+        }
+
     </script>
 </body>
 
