--- a/templates/bam_merger.html
+++ b/templates/bam_merger.html
@@ -169,7 +169,7 @@
         });
 
     </script>
-    <script>
+    <!-- <script>
         function downloadScript() {
             var downloadButton = document.getElementById('start-script');
             fetch('/download_bam_script')
@@ -193,7 +193,7 @@
                 .catch(error => console.error('Download failed:', error));
         }
 
-    </script>
+    </script> -->
 </body>
 
 </html>
