--- a/templates/vcf_creator.html
+++ b/templates/vcf_creator.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/prismjs/themes/prism-okaidia.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/prismjs/prism.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs/components/prism-bash.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.0/socket.io.js"></script>
     <style>
         body {
             padding-top: 20px;
@@ -58,6 +59,8 @@
         <!-- Zone de code pour afficher le script Bash -->
         <pre><code class="language-bash" id="scriptArea"></code></pre>
         <button onclick="copyToClipboard()">Copier</button>
+        <button onclick="downloadScript()" class="btn btn-primary mb-3">Download Script</button>
+        <button id="runScriptButton" class="btn btn-primary">Start Script</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -134,6 +137,64 @@
                 .catch(error => console.error('Error:', error));
         }
     </script>
+    <script>
+        function downloadScript() {
+            window.location.href = '/download_vcf_script';
+        }
+    </script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            var socket = io.connect('http://172.16.102.219:5000/vcf');
+            console.log('Socket.IO status:', typeof io);
+
+            var runButton = document.getElementById('runScriptButton');
+            if (runButton) {
+                runButton.addEventListener('click', function () {
+                    socket.emit('start_vcf_script');
+                    console.log('Script start requested.');  // Ajoutez ceci pour débugger
+                });
+            } else {
+                console.error('Run script button not found!');  // Ajoutez ceci pour débugger
+            }
+
+            socket.on('script_output', function (data) {
+                if (data.type === 'stderr') {
+                    console.error(data.message);
+                } else {
+                    console.log(data.message);
+                }
+            });
+
+            socket.on('script_error', function (data) {
+                console.error('Script error:', data.status);  // Affichez le statut de l'erreur
+            });
+        });
+
+    </script>
+    <!-- <script>
+        function downloadScript() {
+            var downloadButton = document.getElementById('start-script');
+            fetch('/download_vcf_script')
+                .then(response => {
+                    if (response.ok) {
+                        return response.blob();
+                    }
+                    throw new Error('Network response was not ok.');
+                })
+                .then(blob => {
+                    var url = window.URL.createObjectURL(blob);
+                    var a = document.createElement('a');
+                    a.style.display = 'none';
+                    a.href = url;
+                    a.download = 'vcf_script.sh';
+                    document.body.appendChild(a);
+                    a.click();
+                    window.URL.revokeObjectURL(url);
+                })
+                .catch(error => console.error('Download failed:', error));
+        }
+
+    </script> -->
 </body>
 
 </html>
