--- a/templates/full_workflow.html
+++ b/templates/full_workflow.html
@@ -13,6 +13,28 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">GenomePilot</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="/">Installed</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Available Workflows</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/status">Analyses <span id="runningCount" class="badge bg-primary">2</span></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div class="container">
         <h1 class="mt-4">Full Workflow: Basecalling, Demultiplexing, BAM Merge, VCF Creation</h1>
         <form method="POST" enctype="multipart/form-data" id="configForm">
@@ -190,6 +212,7 @@
                 .catch(error => console.error('Error:', error));
         }
     </script>
+    <script src="/static/js/analyse_count.js"></script>
 </body>
 
 </html>
