--- a/templates/history-basecalling.html
+++ b/templates/history-basecalling.html
@@ -7,14 +7,57 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            padding-top: 20px;
+            background-color: #f8f9fa;
+            font-family: Arial, sans-serif;
         }
+        .navbar,
+        .subnav {
+            background-color: #fff;
+            border-bottom: 1px solid #dee2e6;
+        }
+
+        .subnav {
+            padding: 0.5rem 1rem;
+            margin-top: -1px;
+            /* Aligns the subnav directly under the navbar */
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .nav-link.active {
+            border-bottom: 3px solid blue;
+            color: blue;
+        }
+
         .container {
             max-width: 90%;
         }
     </style>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">GenomePilot</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="/">Installed</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Available Workflows</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/status">Analyses <span id="runningCount" class="badge bg-primary">2</span></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div class="container">
         <div class="container">
             <div class="d-flex justify-content-between align-items-center">
@@ -60,5 +103,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/static/js/analyse_count.js"></script>
 </body>
 </html>
