--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,30 @@
 
 
     <style>
+        body {
+            background-color: #f8f9fa;
+            font-family: Arial, sans-serif;
+        }
+
+        .navbar,
+        .subnav {
+            background-color: #fff;
+            border-bottom: 1px solid #dee2e6;
+        }
+
+        .subnav {
+            padding: 0.5rem 1rem;
+            margin-top: -1px;
+            /* Aligns the subnav directly under the navbar */
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .nav-link.active {
+            border-bottom: 3px solid blue;
+            color: blue;
+        }
         .container {
             margin-top: 20px;
         }
@@ -24,6 +48,28 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">GenomePilot</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="/">Installed</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Available Workflows</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/status">Analyses <span id="runningCount" class="badge bg-primary">2</span></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div class="container">
         <div class="container">
             <div class="d-flex justify-content-between align-items-center">
@@ -42,35 +88,35 @@
 
         <form method="POST" enctype="multipart/form-data" id="configForm">
             <div class="mb-3">
-                <label for="base_output_dir" class="form-label">Set the base output directory:</label>
+                <label for="base_output_dir" class="form-label">Selectionnez votre dossier de sortie:</label>
                 <input type="text" class="form-control" name="base_output_dir"
                     placeholder="/data/validation_de_meth_TTR_FLG_2/no_sample/20240611_1220_X1_FLG114_2dac5e43/Basecalling"
                     required>
             </div>
 
             <div class="mb-3">
-                <label for="input_dir" class="form-label">Select the folder for input:</label>
+                <label for="input_dir" class="form-label">Selectionner votre dossier contenant les pod5:</label>
                 <input type="text" class="form-control" name="input_dir"
                     placeholder="/data/validation_de_meth_TTR_FLG_2/no_sample/20240611_1220_X1_FLG114_2dac5e43/pod5​"
                     required>
             </div>
 
             <div class="mb-3">
-                <label for="ref_genome" class="form-label">Select the genome file (e.g., .mmi):</label>
-                <input type="text" class="form-control" name="ref_genome" placeholder=".mmi" required>
+                <label for="ref_genome" class="form-label">Selectionnez votre référence (e.g., .mmi):</label>
+                <input type="text" class="form-control" name="ref_genome" placeholder="/data/References/hg38.mmi" required>
             </div>
             <div class="mb-3">
-                <label for="qs_scores" class="form-label">Enter Q-scores separated by spaces:</label>
+                <label for="qs_scores" class="form-label">Entrez vos Qscores, si vous voullez en mettre plusieurs séparez les par des espaces:</label>
                 <input type="text" class="form-control" name="qs_scores" placeholder="14 17 19" required>
             </div>
             <div class="mb-3">
-                <label for="cuda_device" class="form-label">Specify the CUDA device (e.g., cuda:0):</label>
+                <label for="cuda_device" class="form-label">Spécifiez le nombre de GPU (e.g., cuda:0):</label>
                 <input type="text" class="form-control" name="cuda_device" placeholder="cuda:all" required>
             </div>
             <div class="mb-3">
-                <label for="model" class="form-label">Enter the model name:</label>
+                <label for="model" class="form-label">Entrez votre nom de modèle:</label>
                 <select class="form-control" name="model" required>
-                    <option value="">Please select a model</option>
+                    <option value="">Sélectionnez le modèle</option>
                     <optgroup label="R10 Kits">
                         <option value="dna_r10.4.1_e8.2_260bps_fast@v3.5.2">dna_r10.4.1_e8.2_260bps_fast@v3.5.2</option>
                         <option value="dna_r10.4.1_e8.2_260bps_fast@v4.0.0">dna_r10.4.1_e8.2_260bps_fast@v4.0.0</option>
@@ -115,25 +161,27 @@
                 </select>
             </div>
             <div class="mb-3">
-                <label for="kit_name" class="form-label">Enter the kit name:</label>
+                <label for="kit_name" class="form-label">Entrez le nom du kit:</label>
                 <select class="form-control" name="kit_name" required>
-                    <option value="">Please select a kit</option>
+                    <option value="">Selectionnez votre kit</option>
                     <option value="SQK-NBD114-24">SQK-NBD114-24</option>
                     <option value="SQK-RBK114-24">SQK-RBK114-24</option>
                 </select>
             </div>
 
-            <button type="submit" class="btn btn-primary">Add Configuration</button>
+            <button type="submit" class="btn btn-primary">Ajouter la configuration</button>
         </form>
         <br>
         <h3>Configurations:</h3>
         <ul id="configList" class="list-group mb-4">
             <!-- Les configurations seront ajoutées ici dynamiquement -->
         </ul>
-        <button onclick="generateAndShowScript()" class="btn btn-secondary mb-3">Generate Script</button>
+        <button onclick="generateAndShowScript()" class="btn btn-secondary mb-3">Générer le script</button>
         <!-- Zone de code pour afficher le script Bash -->
         <pre><code class="language-bash" id="scriptArea"></code></pre>
-        <button onclick="copyToClipboard()">Copier</button>
+        <!-- <button onclick="copyToClipboard()">Copier</button> -->
+        <button onclick="downloadScript()" class="btn btn-primary">Télécharger le script sur la machine</button>
+        <button id="runScriptButton" class="btn btn-success">Lancer le script sur la machine</button>
     </div>
     <script>
         function generateAndShowScript() {
@@ -229,10 +277,8 @@
                 })
                 .catch(error => console.error('Error loading configurations:', error));
         });
-
-
-
     </script>
+    <script src="/static/js/analyse_count.js"></script>
 </body>
 
 </html>
