--- a/templates/vcf_creator.html
+++ b/templates/vcf_creator.html
@@ -12,7 +12,27 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.0/socket.io.js"></script>
     <style>
         body {
-            padding-top: 20px;
+            background-color: #f8f9fa;
+            font-family: Arial, sans-serif;
+        }
+        .navbar,
+        .subnav {
+            background-color: #fff;
+            border-bottom: 1px solid #dee2e6;
+        }
+
+        .subnav {
+            padding: 0.5rem 1rem;
+            margin-top: -1px;
+            /* Aligns the subnav directly under the navbar */
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .nav-link.active {
+            border-bottom: 3px solid blue;
+            color: blue;
         }
         .container {
             max-width: 90%;
@@ -21,6 +41,29 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">GenomePilot</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="/">Installed</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Available Workflows</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/status">Analyses <span id="runningCount" class="badge bg-primary">2</span></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    
     <div class="container">
         <div class="container">
             <div class="d-flex justify-content-between align-items-center">
@@ -37,30 +80,31 @@
 
         <form id="configForm">
             <div class="mb-3">
-                <label for="ref_genome" class="form-label">Select the genome file (e.g., .mmi):</label>
-                <input type="text" class="form-control" name="ref_genome" accept=".mmi" required>
+                <label for="ref_genome" class="form-label">Sélectionnez le chemin d'accès de votre référence (.fa):</label>
+                <input type="text" class="form-control" name="ref_genome" placeholder="/data/Reference/hg38.fa" required>
             </div>
             <div class="mb-3">
-                <label for="bam_file" class="form-label">Select the BAM file:</label>
-                <input type="text" class="form-control" id="bam_file" name="bam_file" required>
+                <label for="bam_file" class="form-label">Selectionnez un seul fichier BAM:</label>
+                <input type="text" class="form-control" id="bam_file" name="bam_file" placeholder="/data/RYR2_bis/2023-1893/20240528_1410_X1_FAY45904_ca3b3dfd/Basecalling/demultiplexed_q14/SQK-NBD114-24_barcode24.bam" required>
             </div>
             <div class="mb-3">
-                <label for="output_vcf" class="form-label">Specify the output VCF file name (without extension):</label>
-                <input type="text" class="form-control" id="output_vcf" name="output_vcf" required>
+                <label for="output_vcf" class="form-label">Spécifiez le nom que vous voulez donner à votre vcf (sans l'extension):</label>
+                <input type="text" class="form-control" id="output_vcf" name="output_vcf" placeholder="monvcf" required>
             </div>
-            <button type="submit" class="btn btn-primary">Add Configuration</button>
+            <button type="submit" class="btn btn-primary">Ajouter la configuration</button>
         </form>
         <ul id="configList" class="list-group mt-3"></ul>
+        <br>
         <h3>Configurations:</h3>
         <ul id="configList" class="list-group mb-4">
             <!-- Les configurations seront ajoutées ici dynamiquement -->
         </ul>
-        <button onclick="generateAndShowScript()" class="btn btn-secondary mb-3">Generate Script</button>
+        <button onclick="generateAndShowScript()" class="btn btn-secondary mb-3">Générer le script</button>
         <!-- Zone de code pour afficher le script Bash -->
         <pre><code class="language-bash" id="scriptArea"></code></pre>
-        <button onclick="copyToClipboard()">Copier</button>
-        <button onclick="downloadScript()" class="btn btn-primary mb-3">Download Script</button>
-        <button id="runScriptButton" class="btn btn-primary">Start Script</button>
+        <!-- <button onclick="copyToClipboard()">Copier</button> -->
+        <button onclick="downloadScript()" class="btn btn-primary">Télécharger le script sur la machine</button>
+        <button id="runScriptButton" class="btn btn-success">Lancer le script sur la machine</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -195,6 +239,7 @@
         }
 
     </script> -->
+    <script src="/static/js/analyse_count.js"></script>
 </body>
 
 </html>
