--- a/templates/workflow.html
+++ b/templates/workflow.html
@@ -55,7 +55,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Workflows</a>
+            <a class="navbar-brand" href="/">GenomePilot</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -63,13 +63,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Installed</a>
+                        <a class="nav-link" aria-current="page" href="/">Installed</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Available Workflows</a>
+                        <a class="nav-link active" href="#">Available Workflows</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/status">Analyses <span class="badge bg-primary">2</span></a>
+                        <a class="nav-link" href="/status">Analyses <span id="runningCount" class="badge bg-primary">2</span></a>
                     </li>
                 </ul>
             </div>
@@ -130,6 +130,7 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/static/js/analyse_count.js"></script>
 </body>
 
 </html>
