--- a/templates/disk.html
+++ b/templates/disk.html
@@ -8,48 +8,54 @@
 <body>
     <div id="charts"></div>
     <script>
-        fetch('/diskinfo')
-        .then(response => response.json())
-        .then(data => {
-            const container = document.getElementById('charts');
-            data.forEach((disk, index) => {
-                const canvas = document.createElement('canvas');
-                canvas.id = 'diskChart' + index;
-                canvas.width = '400';
-                canvas.height = '400';
-                container.appendChild(canvas);
-
-                var ctx = canvas.getContext('2d');
-                var myChart = new Chart(ctx, {
-                    type: 'pie',
-                    data: {
-                        labels: ['Utilisé (Go)', 'Libre (Go)'],
-                        datasets: [{
-                            label: `${disk.device} Utilisation du Disque (Go)`,
-                            data: [disk.used, disk.free],
-                            backgroundColor: [
-                                'rgba(255, 99, 132, 0.2)',
-                                'rgba(54, 162, 235, 0.2)'
-                            ],
-                            borderColor: [
-                                'rgba(255, 99, 132, 1)',
-                                'rgba(54, 162, 235, 1)'
-                            ],
-                            borderWidth: 1
-                        }]
-                    },
-                    options: {
-                        responsive: true,
-                        maintainAspectRatio: false,
-                        title: {
-                            display: true,
-                            text: 'Disque: ' + disk.device
+        async function loadDiskData() {
+            try {
+                const response = await fetch('/diskinfo');
+                const data = await response.json();
+                const container = document.getElementById('charts');
+                data.forEach((disk, index) => {
+                    const canvas = document.createElement('canvas');
+                    canvas.id = 'diskChart' + index;
+                    canvas.width = '400';
+                    canvas.height = '400';
+                    container.appendChild(canvas);
+    
+                    var ctx = canvas.getContext('2d');
+                    new Chart(ctx, {
+                        type: 'pie',
+                        data: {
+                            labels: ['Utilisé (Go)', 'Libre (Go)'],
+                            datasets: [{
+                                label: `${disk.device} Utilisation du Disque (Go)`,
+                                data: [disk.used, disk.free],
+                                backgroundColor: [
+                                    'rgba(255, 99, 132, 0.2)',
+                                    'rgba(54, 162, 235, 0.2)'
+                                ],
+                                borderColor: [
+                                    'rgba(255, 99, 132, 1)',
+                                    'rgba(54, 162, 235, 1)'
+                                ],
+                                borderWidth: 1
+                            }]
+                        },
+                        options: {
+                            responsive: true,
+                            maintainAspectRatio: false,
+                            title: {
+                                display: true,
+                                text: 'Disque: ' + disk.device
+                            }
                         }
-                    }
+                    });
                 });
-            });
-        })
-        .catch(error => console.error('Error:', error));
+            } catch (error) {
+                console.error('Error:', error);
+            }
+        }
+    
+        loadDiskData();
     </script>
+    
 </body>
 </html>
