--- a/templates/disk.html
+++ b/templates/disk.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <title>Utilisation de Disques Multiples</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <style>
+        canvas {
+            width: 400px;
+            height: 400px;
+            max-width: 100%;
+        }
+    </style>
 </head>
+
 <body>
     <div id="charts"></div>
     <script>
@@ -16,10 +25,10 @@
                 data.forEach((disk, index) => {
                     const canvas = document.createElement('canvas');
                     canvas.id = 'diskChart' + index;
-                    canvas.width = '400';
-                    canvas.height = '400';
+                    canvas.style.width = '400px';
+                    canvas.style.height = '400px';
                     container.appendChild(canvas);
-    
+
                     var ctx = canvas.getContext('2d');
                     new Chart(ctx, {
                         type: 'pie',
@@ -53,9 +62,10 @@
                 console.error('Error:', error);
             }
         }
-    
+
         loadDiskData();
     </script>
-    
+
 </body>
+
 </html>
