--- a/templates/disk.html
+++ b/templates/disk.html
@@ -7,9 +7,9 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         canvas {
-            width: 400px;
-            height: 400px;
-            max-width: 100%;
+            width: 400px !important;
+            height: 400px !important;
+            max-width: 100% !important;
         }
     </style>
 </head>
