--- a/templates/disk.html
+++ b/templates/disk.html
@@ -49,7 +49,7 @@
                             }]
                         },
                         options: {
-                            responsive: true,
+                            responsive: false,
                             maintainAspectRatio: false,
                             title: {
                                 display: true,
