--- a/templates/disk.html
+++ b/templates/disk.html
@@ -58,7 +58,7 @@
                         }]
                     },
                     options: {
-                        responsive: true,
+                        responsive: false,
                         maintainAspectRatio: false,
                         title: {
                             display: true,
