--- a/templates/disk.html
+++ b/templates/disk.html
@@ -44,8 +44,8 @@
         canvas {
             margin-top: 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            width: 100%;
-            height: auto;
+            width: 20%;
+            height: 400px;
         }
 
         h2 {
